--- a/Desktop/html/style.css
+++ b/Desktop/html/style.css
@@ -38,3 +38,10 @@ font-family:verdana;
 p{
 font-family:verdana;
 }
+#button1{
+	background-color: #ffccff;
+	text-align:center;
+	padding: 14px 40px;
+	border: 5px solid #ff66cc;
+	font-size: 16px;
+}
