--- a/Desktop/html/style.css
+++ b/Desktop/html/style.css
@@ -1,3 +1,6 @@
+body {
+	user-select: none;
+}
 ul {
 	list-style-type: none;
 	position: fixed;
@@ -35,38 +38,13 @@ h1{
 p{
 	font-family:verdana;
 }
-#button1{
-	background-color: #ffccff;
-	text-align:center;
-	padding: 14px 40px;
-	border: 5px solid #ff66cc;
-	font-size: 16px;
-	position:absolute;
-	transition: .5s ease;
-	top: 10%;
-	left: 50%;
-}
-#button2{
-	background-color: #42cbf4;
-	text-align: center;
-	border: 3px solid #eb41f4;
-	font-size: 12px;
-	top: auto;
-	left: auto;
-	position: absolute;
-}
-.Kass img{
-    position: absolute; /* vaba liikumine */
-    width: 100px;
-    transition: 3s;
-}
 
-#div1 {
+#keskala {
 	z-index: 10;
 	position: absolute;
 	padding:75px 30px;
-	left: 40%;
-	top: 40%;
+	left: 45%;
+	top: 30%;
 }
 #küpsis{
 	text-align:center;
@@ -75,58 +53,43 @@ p{
 	width: 100px;
 	border-radius: 100%;
 }
-#chip {
+#chip1 {
 	position:absolute;
-	top: 170px;
-	left: 30px;
-	margin:50px;
-	padding:0px;
 	background-color:#726229;
+	border-radius:100%;
 	height:13px;
 	width:13px;
-	border-radius:100%;
+	transform: translate(30px, 10px);
 }
 #chip2 {
 	position:absolute;
-  top: 140px;
-	left: 1px;
-  margin: 50px;
-  padding:0px;
-  background-color:#726229;
-  height:13px;
-  width:13px;
-  border-radius:100%;
+	background-color:#726229;
+	border-radius:100%;
+	height:13px;
+	width:13px;
+	transform: translate(20px, 60px);
 }
 #chip3 {
 	position:absolute;
-  top: 154px;
-	left: 50px;
-  margin:50px;
-  padding:0px;
-  background-color:#726229;
-  height:13px;
-  width:13px;
-  border-radius:100%;
+	background-color:#726229;
+	border-radius:100%;
+	height:13px;
+	width:13px;
+	transform: translate(50px, 40px);
 }
 #chip4 {
 	position:absolute;
-  top: 130px;
-	left: 45px;
-  margin:50px;
-  padding:0px;
-  background-color:#726229;
-  height:13px;
-  width:13px;
-  border-radius:100%;
+	background-color:#726229;
+	border-radius:100%;
+	height:13px;
+	width:13px;
+	transform: translate(80px, 50px);
 }
 #chip5 {
 	position:absolute;
-  top: 180px;
-	left: 5px;
-  margin:50px;
-  padding:0px;
-  background-color:#726229;
-  height:13px;
-  width:13px;
-  border-radius:100%;
+	background-color:#726229;
+	border-radius:100%;
+	height:13px;
+	width:13px;
+	transform: translate(35px, 75px);
 }
